# crucible-labs

./: README.md  pyproject.toml
clabs/: __init__.py  collection.py  core.py  dataset.py  models.py  project.py  sample.py
clabs/graph/: __init__.py  graph.py  visualization.py
clabs/measurements/: __init__.py  measurement.py
clabs/measurements/image/: __init__.py  image.py  loader.py  plotting.py
clabs/measurements/rga/: __init__.py  loader.py  plotting.py  rga.py
clabs/measurements/uvvis/: __init__.py  h5reader.py  loader.py  uvvis.py
clabs/plot/: __init__.py  tfgrid.py
clabs/utils/: __init__.py  auxiliary.py
examples/: README.md  __init__.py  build_table.py  main_workflow.py  project_workflow.py  quick_start.py  samples_workflow.py  visualize_all_samples.py
tksamples/: __init__.py  collection.py  core.py  dataset.py  project.py  sample.py
tksamples/measurements/: __init__.py  measurement.py
tksamples/measurements/image/: image.py  loader.py
tksamples/measurements/uvvis/: h5reader.py  loader.py  plotting.py  uvvis.py
tksamples/utils/: __init__.py  auxiliary.py
