[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tksamples"
description = "10k thin film sample analysis tools with Crucible integration"
readme = "README.md"
authors = [
    {name = "roncofaber", email = "fabrice.roncoroni@gmail.com"}
]
license = "MIT"
keywords = ["spectroscopy", "uv-vis", "hdf5", "analysis", "nirvana", "samples"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "qrcode>=7.4.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "platformdirs>=2.5.0",
    "scikit-image>=0.19.0",
    "networkx>=2.8.0",
    "nano-crucible @ git+https://github.com/MolecularFoundryCrucible/nano-crucible"
]

[project.urls]
Homepage = "https://github.com/roncofaber/10k-samples"
Repository = "https://github.com/roncofaber/10k-samples"
Documentation = "https://github.com/roncofaber/10k-samples#readme"
"Bug Tracker" = "https://github.com/roncofaber/10k-samples/issues"

[tool.setuptools]
packages = [
    "tksamples",
    "tksamples.read",
    "tksamples.measurements",
    "tksamples.utils",
    "tksamples.crucible",
    "tksamples.examples"
]

[tool.setuptools.package-data]
"tksamples.examples" = ["*.h5"]

[tool.setuptools.dynamic]
version = {attr = "tksamples.__version__"}
