[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-labs"
description = "Sample and dataset management tools with Crucible integration"
readme = "README.md"
authors = [
    {name = "roncofaber", email = "fabrice.roncoroni@gmail.com"}
]
license = "MIT"
keywords = ["spectroscopy", "uv-vis", "hdf5", "analysis", "nirvana", "samples"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "qrcode>=7.4.0",
    "pillow>=9.0.0",
    "pandas>=1.3.0",
    "requests>=2.28.0",
    "platformdirs>=2.5.0",
    "scikit-image>=0.19.0",
    "networkx>=2.8.0",
    "nano-crucible"
]

[project.urls]
Homepage = "https://github.com/roncofaber/crucible-labs"
Repository = "https://github.com/roncofaber/crucible-labs"
Documentation = "https://github.com/roncofaber/crucible-labs#readme"
"Bug Tracker" = "https://github.com/roncofaber/crucible-labs/issues"

[tool.setuptools]
packages = [
    "clabs",
    "clabs.measurements",
    "clabs.measurements.uvvis",
    "clabs.measurements.image",
    "clabs.measurements.rga",
    "clabs.utils",
    "clabs.graph",
    "clabs.plot"
]

[tool.setuptools.dynamic]
version = {attr = "clabs.__version__"}
